BUG: Update changes box was too small

--- a/cdash.css
+++ b/cdash.css
@@ -1047,7 +1047,7 @@ div#index_top {
 
 div#updatechanges {
   position: relative;
-  width: 500px;
+  width: 600px;
   padding-left: 5px;
 }
 
